--- a/Website/stylesheet.css
+++ b/Website/stylesheet.css
@@ -1,4 +1,161 @@
+@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap');
+
 body {
-	background-color: black;
-	margin: 0px;
+    background-color: black;
+    margin: 0px;
+    padding: 0px;
+    box-sizing: border-box;
+    font-family: 'Lato', sans-serif;
+}
+.main {
+	width: 100%;
+	height: 100%;
+	position: relative; 
+	background-image: url("security.jpg");
+	background-size: cover; 
+	background-repeat: no-repeat;
+	color: white; 
+}
+
+a {
+    text-decoration: none;
+}
+
+ul {
+    list-style: none;
+}
+
+nav {
+	display: flex;
+	justify-content: space-around;
+	align-items: center; 
+	left: 0px;
+	top: 0px; 
+	width: 100%;
+	z-index: 1;
+}
+
+nav ul {
+	display: flex;
+}
+
+nav ul li a {
+	height: 40px;
+	margin: 5px;
+	padding: 0px 10px;
+	line-height: 40px;
+	display: flex;
+	font-size: 0.9rem;
+	text-transform: uppercase; 
+	font-weight: 500;
+	border-radius: 3px;
+	color: #ffffff;
+	border-radius: 10px 10px 10px 10px; 
+}	
+
+nav ul li a:hover {
+	background-color: #0077ff11; 	
+	color: yellow;
+	box-shadow: 5px 10px 30px rgba(0,60,250,0.300);  
+}
+
+.features {
+	background-color: black; 
+	width: 100%; 
+	height: 90vh;
+	box-sizing: border-box;
+	display: flex; 
+	justify-content: center;
+	align-items: center;
+	flex-direction: column; 
+	margin-top: -100px; 
+}
+
+.features-container {
+	display: flex; 
+	justify-content: center; 
+	align-items: center; 
+}
+
+.feature-box { 
+	background: transparent;
+	width: 300px;
+	height: 450px;
+	margin: 20px;
+	border-radius: 10px;
+	overflow: hidden;
+	position: relative;
+	box-shadow: yellow;
+}
+
+.f-img img{
+	width: 100%;
+	height: 63%;
+}
+
+.f-text {
+	width: 100%; 
+	height: 30%;
+	display: flex; 
+	justify-content: center; 
+	align-items: center;
+	flex-direction: column;
+	color: white; 
+}
+
+.f-text h4 {
+	margin-top: -12px;
+}
+
+.f-text a {
+		color: white;
+		background-color: rgb(17,0,255); 
+		box-sizing: border-box;
+		padding: 10px 5px;
+		margin: 10px 5px;
+		font-weight: bold; 
+}
+
+.f-text a:hover {
+	color: yellow;
+}
+
+.active {
+	color: yellow;
+}
+
+.main-part {
+	width: 500px; 
+	position: absolute;
+	left: 15%;
+	top: 47%;
+	transform: translate(-15%, -47%);
+}
+
+.main-part h1 {
+	font-size: 50px;
+	color: #fff;
+}
+
+.main-part p{
+	color: #e2e2e2;
+	width: 400px;
+}
+
+.main-part a{ 
+	background-color: yellow;
+	box-sizing: border-box; 
+	color: black;
+	padding: 10px 20px; 
+	margin: 15px 10px; 
+	font-weight: bold;
+	transition: 0.6s ease-in-out;
+}
+
+.main-part a:hover{
+	color: rgb(138,138,138); 
+} 	
 	
+	
+	
+		
