--- a/Website/stylesheet.css
+++ b/Website/stylesheet.css
@@ -60,7 +60,7 @@ nav ul li a:hover {
 }
 
 .features {
-	background-color: black; 
+	background-color: gray; 
 	width: 100%; 
 	height: 90vh;
 	box-sizing: border-box;
@@ -158,4 +158,3 @@ nav ul li a:hover {
 	
 	
 	
-		
