--- a/Website/stylesheet.css
+++ b/Website/stylesheet.css
@@ -59,8 +59,45 @@ nav ul li a:hover {
 	box-shadow: 5px 10px 30px rgba(0,60,250,0.300);  
 }
 
+/* Dropdown Styles */
+.dropdown {
+  position: relative;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+  /* Adjust the width of the dropdown content based on its content */
+  width: auto;
+  /* Set maximum height and enable overflow scrolling */
+  max-height: 200px; /* Adjust as needed */
+  overflow-y: auto;
+}
+
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+.dropdown-content a:hover {
+  background-color: #ddd;
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+/*End of the dropdown */
+
+
+
 .features {
-	background-color: gray; 
+	background-color: black; 
 	width: 100%; 
 	height: 90vh;
 	box-sizing: border-box;
@@ -154,7 +191,4 @@ nav ul li a:hover {
 
 .main-part a:hover{
 	color: rgb(138,138,138); 
-} 	
-	
-	
-	
+}
