--- a/Website/stylesheet.css
+++ b/Website/stylesheet.css
@@ -1,3 +1,4 @@
+
 @import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap');
 
 body {
@@ -7,16 +8,26 @@ body {
     box-sizing: border-box;
     font-family: 'Lato', sans-serif;
 }
+
 .main {
-	width: 100%;
-	height: 100%;
-	position: relative; 
-	background-image: url("security.jpg");
-	background-size: cover; 
-	background-repeat: no-repeat;
-	color: white; 
+    width: 100%;
+    height: 100%;
+    position: relative; 
+    background-image: url("security.jpg");
+    background-size: cover; 
+    background-repeat: no-repeat;
+    color: white; 
+    animation: easeIn 2s ease-in-out forwards;
 }
 
+@keyframes easeIn {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
+}
 a {
     text-decoration: none;
 }
@@ -93,8 +104,6 @@ nav ul li a:hover {
   display: block;
 }
 /*End of the dropdown */
-
-
 
 .features {
 	background-color: black; 
@@ -179,16 +188,26 @@ nav ul li a:hover {
 	width: 400px;
 }
 
-.main-part a{ 
-	background-color: yellow;
-	box-sizing: border-box; 
-	color: black;
-	padding: 10px 20px; 
-	margin: 15px 10px; 
-	font-weight: bold;
-	transition: 0.6s ease-in-out;
+.main-part a.main-btn { 
+    background-color: yellow;
+    box-sizing: border-box; 
+    color: black;
+    padding: 10px 20px; 
+    margin: 15px 10px; 
+    font-weight: bold;
+    transition: 0.6s ease-in-out;
 }
 
-.main-part a:hover{
-	color: rgb(138,138,138); 
+.main-part a.main-btn:hover {
+    color: rgb(138,138,138); 
+}
+
+.main-part a.login-link {
+    color: #0066cc; /* Blue color for the link */
+    text-decoration: underline; /* Underlined text */
+    transition: color 0.3s ease-in-out; /* Smooth color transition */
+}
+
+.main-part a.login-link:hover {
+    color: #004080; /* Darker blue on hover */
 }
